langda/history/DoubleDC_5Round/test_history/pl___coin_:precise.pl_run3/#test_results_result.txt
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 8:16.Error evaluating Problog model:
    def get_state(c):
    
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/langda/utils/test_tools.py", line 17, in timeout_handler
    raise TimeoutError(f"Function timed out while processing file: {file_basename}")
TimeoutError: Function timed out while processing file: pl___coin_:precise.pl_run3Error evaluating Problog model:
    return hash(self.functor)
           ^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/langda/utils/test_tools.py", line 17, in timeout_handler
    raise TimeoutError(f"Function timed out while processing file: {file_basename}")
TimeoutError: Function timed out while processing file: pl___coin_:precise.pl_run3